--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-    "dependencies": {
-      "body-parser": "^1.18.3",
-      "cors": "^2.8.5",
-      "dotenv": "^6.2.0",
-      "express": "^4.16.4",
-      "helmet": "^3.15.0",
-      "moment": "^2.23.0",
-      "mongoose": "^5.4.2"
-    },
-    "scripts": {
-      "dev": "nodemon server.js",
-      "start": "node server.js"
-    }
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "moment": "^2.23.0",
+    "mongoose": "^5.4.2",
+    "universal-cookie": "^3.0.7"
+  },
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   }
+}
