--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "global": "^4.3.2",
     "helmet": "^3.15.0",
     "moment": "^2.23.0",
     "mongoose": "^5.4.2",
+    "nodemon": "^1.18.10",
     "universal-cookie": "^3.0.7"
   },
   "scripts": {
